--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -27,7 +27,7 @@
                         <label for="departure_date">Date Departing:</label>
                         <input type="date" id="departure_date" name="departure_date">
 
-                        <button type="submit">Search</button>
+                        <button type="submit">Plan Trip</button>
                     </form>
                 </div>
             </section>
