--- a/src/client/styles/card.scss
+++ b/src/client/styles/card.scss
@@ -1,27 +1,32 @@
 #tripCardContainer {
     display: flex;
-    flex-direction: 'row';
+    flex-direction: 'column';
     justify-content:'center'; // Center horizontally
     align-items: 'center';
     margin: 0 auto;
     gap: 20px;
-    width: 200px;
-    height:100px;
+    // width: 200px;
+    // height:100px;
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 100px;
     margin-top: 20px;
-    background-color: #84bc63;
+    margin-bottom: 100px;
+    // background-color: #84bc63;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: left;
 }
 
 #cityImageContainer {
     flex: 1; /* Take up 1/3 of the available space */
-    max-width: 33.33%; /* Limit image to 1/3 of the container width */
+    max-width: 60%; /* Limit image to 1/3 of the container width */
 }
 
 #tripDetailsContainer {
-    flex: 2; /* Take up 2/3 of the available space */
-    max-width: 66.67%; /* Limit details to 2/3 of the container width */
+    flex: 1; /* Take up 2/3 of the available space */
+    max-width: 40%; /* Limit details to 2/3 of the container width */
+}
+
+#restaurant-list {
+    list-style-type: none;
 }
