--- a/src/client/styles/index.scss
+++ b/src/client/styles/index.scss
@@ -1,14 +1,24 @@
+@import url("header.scss");
+@import url("footer.scss");
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f5f5f5;
-    // background-image: url('/src/client/media/annie-spratt-qyAka7W5uMY-unsplash.jpg'); /* Replace 'your-image-url.jpg' with your image URL */
-    // background-size: cover;
-    // background-position: center;
+}
+
+.container {
+
+    display:flex;
+    flex-direction:column;
+    width:100%;
+    grid-gap: 30px;
+
 }
 
 main {
     padding: 20px;
     text-align: center;
 }
+
