--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -44,7 +44,9 @@
                         <p id="daysAway"></p>
                         <p id="averageTemperature"></p>
                         <p id="weatherDescription"></p>
-                        <h3>Recommended Restaurants:</h3>
+                        <h3>Recommended Hotels</h3>
+                        <ul id="hotel-list"></ul>
+                        <h3>Recommended Restaurants</h3>
                         <ul id="restaurant-list"></ul>
                 </div>
             </section>
