--- a/src/client/styles/card.scss
+++ b/src/client/styles/card.scss
@@ -1,6 +1,6 @@
 #tripCardContainer {
     display: flex;
-    flex-direction: 'column';
+    flex-direction: row;
     justify-content:'center'; // Center horizontally
     align-items: 'center';
     margin: 0 auto;
@@ -27,6 +27,6 @@
     max-width: 40%; /* Limit details to 2/3 of the container width */
 }
 
-#restaurant-list {
-    list-style-type: none;
-}
+// #restaurant-list {
+//     // list-style-type: none;
+// }
