--- a/src/client/styles/footer.scss
+++ b/src/client/styles/footer.scss
@@ -1,6 +1,6 @@
 footer {
-    background-color: #333;
-    color: #fff;
+    background-color: #a2df85;
+    color: #2b2a2a;
     padding: 10px;
     text-align: center;
     position: fixed;
