--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -1,6 +1,6 @@
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: #a2df85;
+    color: #2b2a2a;
     padding: 20px;
     text-align: center;
 }
