--- a/src/client/styles/index.scss
+++ b/src/client/styles/index.scss
@@ -5,11 +5,13 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
+    background-image: url('../media/annie-spratt-qyAka7W5uMY-unsplash.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .container {
-
     display:flex;
     flex-direction:column;
     width:100%;
