--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -2,18 +2,15 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Test</title>
+        <title>Travelr</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
 
     <body>
         <header class="header">
             <nav class="navbar">
-                <h1>Welcome to our Travel App</h1>
-                <ul class="navbar-list">
-                    <li class="nav-list-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-list-item"><a class="nav-link" href="#plan-trip">Plan Trip</a></li>
-                  </ul>
+                <h1><i class="fas fa-plane"></i><b>Travelr</b></h1>
             </nav>
         </header>
 
@@ -27,6 +24,9 @@
                         <label for="departure_date">Date Departing:</label>
                         <input type="date" id="departure_date" name="departure_date">
 
+                        <label for="departure_date">Date Returning:</label>
+                        <input type="date" id="return_date" name="return_date">
+
                         <button type="submit">Plan Trip</button>
                     </form>
                 </div>
@@ -38,24 +38,33 @@
                         <img src="" alt="destination image" id="destination-image">
                     </div>
                     <div id="tripDetailsContainer">
-                        <h3>Your Trip Details</h3>
+                        <h3><b>Your Trip Details</b></h3>
                         <p id="destination"></p>
                         <p id="tripDate"></p>
-                        <p id="daysAway"></p>
+                        <p id="tripDays"></p>
                         <p id="averageTemperature"></p>
                         <p id="weatherDescription"></p>
-                        <h3>Recommended Hotels</h3>
+                        <h3><b>Places to Stay</b></h3>
                         <ul id="hotel-list"></ul>
-                        <h3>Recommended Restaurants</h3>
+                        <h3><b>Places to Eat</b></h3>
                         <ul id="restaurant-list"></ul>
                 </div>
             </section>
 
-
         </main>
 
         <footer>
-            <p>Made by Raza Kazmi</p>
+            <p>Made with ❤️ by Raza Kazmi</p>
         </footer>
+
+        <script>
+            // Check that service workers are supported
+            if ('serviceWorker' in navigator) {
+              // Use the window load event to keep the page load performant
+              window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js');
+              });
+            }
+          </script>
     </body>
 </html>
